--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -67,7 +67,7 @@
 
     <nav>
         <a href="https://vertikalapp.com" class="logo-link">
-            <img src="assets/Vertikal_Logo_Master.png" alt="VERTIKAL" class="logo-img">
+            <img src="/assets/Vertikal_Logo_Master.png" alt="VERTIKAL" class="logo-img">
             <span style="color:#00C853">// CAPITAL</span>
         </a>
         <div class="nav-links">
@@ -87,7 +87,7 @@
 
     <section>
         <div class="container">
-            <h2>MARKET OPPORTUNITY</h2>
+            <h2>THE OPPORTUNITY</h2>
             <div class="grid grid-2">
                 <div>
                     <h3>The Gap</h3>
@@ -98,6 +98,16 @@
                     <p>Black culture is the #1 export of the internet. By financializing this influence through ownership, we create a defensible moat that traditional platforms cannot replicate.</p>
                 </div>
             </div>
+            <div class="grid grid-2" style="margin-top: 3rem;">
+                <div>
+                    <h3 style="color: var(--green);">Market Inefficiency</h3>
+                    <p>Black creators drive disproportionate engagement but receive the smallest slice of capitalization. Vertikal corrects this structural gap.</p>
+                </div>
+                <div>
+                    <h3 style="color: var(--green);">Closed-Loop Economics</h3>
+                    <p>Originals incubated internally. Networks retain IP rights. Distribution scales via FAST/SVOD licensing. Margin expansion at every layer.</p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -105,10 +115,16 @@
         <div class="container">
             <h2>EARLY CAPITAL RECOGNITION</h2>
             <div class="badge-row">
-                <img src="INVESTORS_BADGE_VERTIKAL.jpg" alt="Green Badge" class="badge-img">
+                <img src="/assets/badges/investors-badge-green.jpg" alt="Green Investor Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
-                    <h3 style="color: var(--green);">Titanium Investor Badge</h3>
+                    <h3 style="color: var(--green);">Green Investor Badge</h3>
                     <p style="margin:0; font-size: 1.1rem;"><strong>Pre-launch exclusivity. Permanent ownership signal.</strong> Early institutional partners only. Grants priority deal flow and permanent equity recognition. Not available post-launch. Represents ownership leverage.</p>
+                    <ul style="margin-top: 1rem; padding-left: 1.5rem; color: var(--muted); list-style: none;">
+                        <li style="margin-bottom: 0.5rem;">• Priority access to validated IP pipeline</li>
+                        <li style="margin-bottom: 0.5rem;">• Permanent equity recognition</li>
+                        <li style="margin-bottom: 0.5rem;">• Early deal flow on licensing opportunities</li>
+                        <li style="margin-bottom: 0.5rem;">• Pre-launch exclusivity (not available post-launch)</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -175,6 +191,14 @@
             <a href="#" class="btn">Request Pitch Deck</a>
         </div>
     </section>
+
+    <footer style="padding: 4rem 2rem; border-top: 1px solid var(--border); text-align: center; background: var(--bg);">
+        <div class="container">
+            <p style="color: var(--muted); margin-bottom: 1rem;">For investment inquiries:</p>
+            <a href="mailto:invest@vertikalapp.com" style="color: var(--green); text-decoration: none; font-weight: 700;">invest@vertikalapp.com</a>
+            <p style="color: var(--muted); margin-top: 2rem; font-size: 0.9rem;">&copy; 2024 Vertikal. All rights reserved.</p>
+        </div>
+    </footer>
 
     <!-- DEMO MODAL -->
     <div id="demoModal" class="modal">
