--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -74,7 +74,7 @@
 
     <nav>
         <a href="https://vertikalapp.com" class="logo-link">
-            <img src="assets/Vertikal_Logo_Master.png" alt="VERTIKAL" class="logo-img">
+            <img src="/assets/Vertikal_Logo_Master.png" alt="VERTIKAL" class="logo-img">
             <span style="color:#888">// NETWORKS</span>
         </a>
         <div class="nav-links">
@@ -127,7 +127,7 @@
         <div class="container">
             <h2>THE TITANIUM ADVANTAGE</h2>
             <div class="badge-row">
-                <img src="FOUNDING 50 Networks titanium V speciality smoke.jpg" alt="Titanium Badge" class="badge-img">
+                <img src="/assets/badges/networks-badge-titanium.jpg" alt="Titanium Network Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--titanium);">Titanium Network Partner</h3>
                     <p style="margin:0; font-size: 1.1rem;"><strong>Studio-Level Authority.</strong> This badge signals you are a content factory. Priority access to vetted talent. Early deal flow. Pipeline control. When brands see Titanium, they know you deliver.</p>
@@ -137,6 +137,26 @@
                         <li>Pipeline control and exclusivity windows</li>
                         <li>Studio-level brand recognition</li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h2>WHY VERTIKAL BEATS OTHER MEDIA APPS</h2>
+            <div class="grid grid-2">
+                <div class="card">
+                    <h3 style="color: var(--titanium); margin-bottom: 1rem;">1. IP Ownership, Not Rental</h3>
+                    <p style="font-size: 1rem;">Other platforms make you rent your audience. Vertikal Networks own the IP, the franchise, and the long-tail revenue. You're building assets, not just views.</p>
+                </div>
+                <div class="card">
+                    <h3 style="color: var(--titanium); margin-bottom: 1rem;">2. Brand-Safe, Premium Environment</h3>
+                    <p style="font-size: 1rem;">TikTok and YouTube are algorithm-driven chaos. Vertikal is curated, cinematic, and brand-safe. Premium brands trust our environment because we control quality.</p>
+                </div>
+                <div class="card">
+                    <h3 style="color: var(--titanium); margin-bottom: 1rem;">3. Multiple Revenue Layers</h3>
+                    <p style="font-size: 1rem;">Ad share, licensing deals, brand partnerships, and franchise expansion. Other apps give you one revenue stream. Vertikal gives you four. That's the difference between a platform and infrastructure.</p>
                 </div>
             </div>
         </div>
@@ -196,6 +216,14 @@
             <a href="#" class="btn">Apply as Network</a>
         </div>
     </section>
+
+    <footer style="padding: 4rem 2rem; border-top: 1px solid var(--border); text-align: center; background: var(--bg);">
+        <div class="container">
+            <p style="color: var(--muted); margin-bottom: 1rem;">For partnership inquiries:</p>
+            <a href="mailto:partners@vertikalapp.com" style="color: var(--titanium); text-decoration: none; font-weight: 700;">partners@vertikalapp.com</a>
+            <p style="color: var(--muted); margin-top: 2rem; font-size: 0.9rem;">&copy; 2024 Vertikal. All rights reserved.</p>
+        </div>
+    </footer>
 
     <!-- DEMO MODAL -->
     <div id="demoModal" class="modal">
