--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -115,7 +115,7 @@
 
     <nav>
         <a href="https://vertikalapp.com" class="logo-link">
-            <img src="assets/Vertikal_Logo_Master.png" alt="VERTIKAL" class="logo-img">
+            <img src="/assets/Vertikal_Logo_Master.png" alt="VERTIKAL" class="logo-img">
             <span style="color:#888">// CREATORS</span>
         </a>
         <div class="nav-links">
@@ -157,7 +157,7 @@
             <p>The V Badge signals contribution, priority, and access. It is earned, not bought.</p>
             
             <div class="badge-row" style="border-left: 4px solid var(--gold);">
-                <img src="FOUNDING 50 GOLD V .jpg" alt="Gold Badge" class="badge-img">
+                <img src="/assets/badges/creators-badge-gold.jpg" alt="Gold Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--gold);">Gold Tier: The Founding 50</h3>
                     <p style="margin:0;"><strong>Strictly capped at the first 50 creators.</strong> The visionaries who defined the platform. Signals highest algorithmic priority and founding equity status.</p>
@@ -165,7 +165,7 @@
             </div>
 
             <div class="badge-row" style="border-left: 4px solid var(--blue);">
-                <img src="blue_v.jpg" alt="Blue Badge" class="badge-img">
+                <img src="/assets/badges/creators-badge-blue.jpg" alt="Blue Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
                 <div>
                     <h3 style="color: var(--blue);">Blue Tier: Verified Creator</h3>
                     <p style="margin:0;"><strong>The Quality Standard.</strong> Awarded to creators demonstrating consistent cinematic output (51-200+). Unlocks monetization tools and franchise support.</p>
