FIX: Deployment lockdown - asset paths, content sections, Git-only deployment
- Add asset copy steps to GitHub Actions for all subdomains
- Add 'why Vertikal is different' sections to networks + creators
- Verify investors page structure (badge above payment, footer email)
- Ensure all asset paths resolve correctly in deployed output

--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -144,19 +144,19 @@
 
     <section>
         <div class="container">
-            <h2>WHY VERTIKAL BEATS OTHER MEDIA APPS</h2>
+            <h2>WHY VERTIKAL IS DIFFERENT</h2>
             <div class="grid grid-2">
                 <div class="card">
-                    <h3 style="color: var(--titanium); margin-bottom: 1rem;">1. IP Ownership, Not Rental</h3>
-                    <p style="font-size: 1rem;">Other platforms make you rent your audience. Vertikal Networks own the IP, the franchise, and the long-tail revenue. You're building assets, not just views.</p>
+                    <h3 style="color: var(--titanium); margin-bottom: 1rem;">1. The Vibe Effect</h3>
+                    <p style="font-size: 1rem;">VibeCode creates real-time engagement without interruption. Comments flow over content, preserving cultural context. This isn't social media—it's cinematic conversation.</p>
                 </div>
                 <div class="card">
-                    <h3 style="color: var(--titanium); margin-bottom: 1rem;">2. Brand-Safe, Premium Environment</h3>
-                    <p style="font-size: 1rem;">TikTok and YouTube are algorithm-driven chaos. Vertikal is curated, cinematic, and brand-safe. Premium brands trust our environment because we control quality.</p>
+                    <h3 style="color: var(--titanium); margin-bottom: 1rem;">2. Ownership/IP/Franchise Model</h3>
+                    <p style="font-size: 1rem;">Networks own the IP, not rent it. You build franchises, not followers. Long-tail revenue through licensing, merchandising, and expansion. Assets, not algorithms.</p>
                 </div>
                 <div class="card">
-                    <h3 style="color: var(--titanium); margin-bottom: 1rem;">3. Multiple Revenue Layers</h3>
-                    <p style="font-size: 1rem;">Ad share, licensing deals, brand partnerships, and franchise expansion. Other apps give you one revenue stream. Vertikal gives you four. That's the difference between a platform and infrastructure.</p>
+                    <h3 style="color: var(--titanium); margin-bottom: 1rem;">3. Premium Vertical Narrative Infrastructure</h3>
+                    <p style="font-size: 1rem;">Built for the 2–10 minute cinematic window. Curated, brand-safe, algorithm-free. We're not competing with TikTok—we're building the infrastructure for premium vertical storytelling.</p>
                 </div>
             </div>
         </div>
