--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -196,6 +196,26 @@
 
     <section>
         <div class="container">
+            <h2>WHY VERTIKAL IS DIFFERENT</h2>
+            <div class="grid grid-2">
+                <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--gold);">
+                    <h3 style="color: var(--gold); margin-bottom: 1rem;">1. The Vibe Effect</h3>
+                    <p style="font-size: 1rem;">VibeCode creates real-time engagement without interruption. Comments flow over content, preserving cultural context. This isn't social media—it's cinematic conversation.</p>
+                </div>
+                <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--blue);">
+                    <h3 style="color: var(--blue); margin-bottom: 1rem;">2. Ownership/IP/Franchise Model</h3>
+                    <p style="font-size: 1rem;">You own the IP, not rent it. Build franchises, not followers. Long-tail revenue through licensing, merchandising, and expansion. Assets, not algorithms.</p>
+                </div>
+                <div class="card" style="background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid #333;">
+                    <h3 style="color: #fff; margin-bottom: 1rem;">3. Premium Vertical Narrative Infrastructure</h3>
+                    <p style="font-size: 1rem;">Built for the 2–10 minute cinematic window. Curated, brand-safe, algorithm-free. We're not competing with TikTok—we're building the infrastructure for premium vertical storytelling.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
             <h2>OWNING THE CULTURE</h2>
             <div class="grid grid-2">
                 <div>
