FEAT: CTA + Forms activation - Zapier webhook integration, all buttons wired, founder profiles added

--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -122,8 +122,8 @@
             <a href="../creators/index.html">Creators</a>
             <a href="../networks/index.html">Networks</a>
             <a href="../investors/index.html">Investors</a>
-            <a href="#" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;" onclick="event.preventDefault(); document.getElementById('demoModal').classList.add('active');">Watch Live Demo</a>
-            <a href="#apply" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Apply</a>
+            <a href="/demo/" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Watch Live Demo</a>
+            <a href="/apply/" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Apply</a>
         </div>
     </nav>
 
@@ -288,7 +288,7 @@
         <div class="container">
             <h2 style="border: none; padding: 0;">READY TO BUILD?</h2>
             <p style="margin: 0 auto 2rem auto;">Access is curated. Scarcity is intentional.</p>
-            <a href="#" class="btn">Apply For Badge</a>
+            <a href="/apply/" class="btn">Apply For Badge</a>
         </div>
     </section>
 
