--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
             <a href="networks/index.html">Networks</a>
             <a href="investors/index.html">Investors</a>
             <a href="beta/index.html" style="color: #FFD700;">Beta Live</a>
-            <a href="#" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;" onclick="event.preventDefault(); document.getElementById('demoModal').classList.add('active');">Watch Live Demo</a>
+            <a href="/demo/" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Watch Live Demo</a>
         </div>
     </nav>
 
@@ -235,7 +235,7 @@
         <div class="container" style="text-align: center;">
             <h2>OWNERSHIP. NOT CHARITY.</h2>
             <p style="color: #fff; font-size: 1.2rem; margin-bottom: 2rem;">Black culture drives the algorithm, but we don't own the platform. Vertikal is a market opportunity designed to <strong>retain IP, retain revenue, and retain leverage.</strong></p>
-            <a href="#" class="btn btn-primary" onclick="event.preventDefault(); document.getElementById('signupModal').classList.add('active');">Join The Founding 50</a>
+            <a href="/apply/" class="btn btn-primary">Join The Founding 50</a>
         </div>
     </section>
 
