--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -74,7 +74,7 @@
             <a href="../creators/index.html">Creators</a>
             <a href="../networks/index.html">Networks</a>
             <a href="../investors/index.html">Investors</a>
-            <a href="#" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;" onclick="event.preventDefault(); document.getElementById('demoModal').classList.add('active');">Watch Live Demo</a>
+            <a href="/demo/" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Watch Live Demo</a>
             <a href="#deck" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Deck</a>
         </div>
     </nav>
@@ -188,7 +188,7 @@
         <div class="container">
             <h2 style="border: none; padding: 0;">THE ASK</h2>
             <p style="margin: 0 auto 2rem auto;">We are looking for partners who understand the math of cultural ownership.</p>
-            <a href="#" class="btn">Request Pitch Deck</a>
+            <a href="/invest/" class="btn">Request Pitch Deck</a>
         </div>
     </section>
 
