--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -81,7 +81,7 @@
             <a href="../creators/index.html">Creators</a>
             <a href="../networks/index.html">Networks</a>
             <a href="../investors/index.html">Investors</a>
-            <a href="#" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;" onclick="event.preventDefault(); document.getElementById('demoModal').classList.add('active');">Watch Live Demo</a>
+            <a href="/demo/" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Watch Live Demo</a>
             <a href="#partner" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Partner</a>
         </div>
     </nav>
@@ -213,7 +213,7 @@
         <div class="container">
             <h2 style="border: none; padding: 0;">THE WINDOW IS CLOSING</h2>
             <p style="margin: 0 auto 2rem auto;">Early partners define the rules. Late partners pay the premiums.</p>
-            <a href="#" class="btn">Apply as Network</a>
+            <a href="/apply/" class="btn">Apply as Network</a>
         </div>
     </section>
 
