Prepare repository for Cloudflare Pages Git deploy: enforce brand assets, badge usage, VibeCode explainer, and routing

--- a/public/beta/index.html
+++ b/public/beta/index.html
@@ -68,10 +68,10 @@
             <span style="color:#FFD700">// BETA</span>
         </a>
         <div class="nav-links">
-            <a href="../index.html">Main</a>
-            <a href="../creators/index.html">Creators</a>
-            <a href="../networks/index.html">Networks</a>
-            <a href="../investors/index.html">Investors</a>
+            <a href="https://vertikalapp.com">Main</a>
+            <a href="https://vertikalapp.com/creators/">Creators</a>
+            <a href="https://vertikalapp.com/networks/">Networks</a>
+            <a href="https://vertikalapp.com/investors/">Investors</a>
         </div>
     </nav>
 
@@ -105,6 +105,34 @@
                     <h3 style="color: #B0BEC5; margin-bottom: 1rem;">"This is Infrastructure"</h3>
                     <p style="font-size: 1rem; font-style: italic; color: var(--muted);">"Vertikal isn't just another app. It's the infrastructure for the next generation of media. We're building something real here."</p>
                     <p style="margin-top: 1rem; font-size: 0.9rem; color: #888;">— Network Partner</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- VIBECODE EXPLANATION -->
+    <section class="vibecode-section" style="padding: 6rem 0; border-bottom: 1px solid var(--border);">
+        <div class="container">
+            <h2>VIBECODE</h2>
+            <p style="color: #fff; font-size: 1.3rem; margin-bottom: 2rem;">
+                <strong>VibeCode</strong> is Vertikal's real-time comment overlay system. Comments flow across the screen as you watch, creating a shared viewing experience without interrupting the content.
+            </p>
+            <div class="grid grid-2">
+                <div style="border-left: 4px solid #333; padding-left: 1.5rem; margin-bottom: 2rem;">
+                    <h3 style="color: #FFD700; margin-bottom: 0.5rem;">Real-Time Emotional Reactions</h3>
+                    <p style="font-size: 0.95rem;">Comments appear in real-time as viewers react to moments. No scrolling, no pausing. Pure immersion.</p>
+                </div>
+                <div style="border-left: 4px solid #333; padding-left: 1.5rem; margin-bottom: 2rem;">
+                    <h3 style="color: #2962FF; margin-bottom: 0.5rem;">Replacement of Low-Signal Comments</h3>
+                    <p style="font-size: 0.95rem;">VibeCode replaces traditional comment sections with contextual, real-time engagement. No noise, just signal.</p>
+                </div>
+                <div style="border-left: 4px solid #333; padding-left: 1.5rem; margin-bottom: 2rem;">
+                    <h3 style="color: #00C853; margin-bottom: 0.5rem;">Engagement Signals & Heatmaps</h3>
+                    <p style="font-size: 0.95rem;">Heatmaps show where viewers engage most. Creators see what resonates. Data-driven storytelling.</p>
+                </div>
+                <div style="border-left: 4px solid #333; padding-left: 1.5rem; margin-bottom: 2rem;">
+                    <h3 style="color: #B0BEC5; margin-bottom: 0.5rem;">Algorithm-Free</h3>
+                    <p style="font-size: 0.95rem;">No engagement bait. No forced virality. VibeCode amplifies authentic reactions, not manufactured metrics.</p>
                 </div>
             </div>
         </div>
