--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -71,9 +71,9 @@
             <span style="color:#00C853">// CAPITAL</span>
         </a>
         <div class="nav-links">
-            <a href="../creators/index.html">Creators</a>
-            <a href="../networks/index.html">Networks</a>
-            <a href="../investors/index.html">Investors</a>
+            <a href="https://vertikalapp.com">Main</a>
+            <a href="https://vertikalapp.com/creators/">Creators</a>
+            <a href="https://vertikalapp.com/networks/">Networks</a>
             <a href="/demo/" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Watch Live Demo</a>
             <a href="#deck" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Deck</a>
         </div>
