--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -78,9 +78,9 @@
             <span style="color:#888">// NETWORKS</span>
         </a>
         <div class="nav-links">
-            <a href="../creators/index.html">Creators</a>
-            <a href="../networks/index.html">Networks</a>
-            <a href="../investors/index.html">Investors</a>
+            <a href="https://vertikalapp.com">Main</a>
+            <a href="https://vertikalapp.com/creators/">Creators</a>
+            <a href="https://vertikalapp.com/investors/">Investors</a>
             <a href="/demo/" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Watch Live Demo</a>
             <a href="#partner" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Partner</a>
         </div>
