--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -119,9 +119,9 @@
             <span style="color:#888">// CREATORS</span>
         </a>
         <div class="nav-links">
-            <a href="../creators/index.html">Creators</a>
-            <a href="../networks/index.html">Networks</a>
-            <a href="../investors/index.html">Investors</a>
+            <a href="https://vertikalapp.com">Main</a>
+            <a href="https://vertikalapp.com/networks/">Networks</a>
+            <a href="https://vertikalapp.com/investors/">Investors</a>
             <a href="/demo/" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Watch Live Demo</a>
             <a href="/apply/" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Apply</a>
         </div>
@@ -164,13 +164,6 @@
                 </div>
             </div>
 
-            <div class="badge-row" style="border-left: 4px solid var(--blue);">
-                <img src="/assets/badges/creators-badge-blue.jpg" alt="Blue Badge" class="badge-img" onerror="this.style.display='none'; this.nextElementSibling.style.gridColumn='1/-1';">
-                <div>
-                    <h3 style="color: var(--blue);">Blue Tier: Verified Creator</h3>
-                    <p style="margin:0;"><strong>The Quality Standard.</strong> Awarded to creators demonstrating consistent cinematic output (51-200+). Unlocks monetization tools and franchise support.</p>
-                </div>
-            </div>
         </div>
     </section>
 
