--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -122,7 +122,7 @@
             <a href="https://vertikalapp.com">Main</a>
             <a href="https://vertikalapp.com/networks/">Networks</a>
             <a href="https://vertikalapp.com/investors/">Investors</a>
-            <a href="/demo/" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Watch Live Demo</a>
+            <a href="#" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;" onclick="event.preventDefault(); document.getElementById('demoModal').classList.add('active');">Watch Live Demo</a>
             <a href="/apply/" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;">Apply</a>
         </div>
     </nav>
@@ -171,6 +171,7 @@
     <section class="vibecode-section">
         <div class="container">
             <h2>VIBECODE</h2>
+            <!-- TODO: Replace "VibeCode" with the correct feature name once provided by stakeholder -->
             <p style="color: #fff; font-size: 1.3rem; margin-bottom: 2rem;">
                 <strong>VibeCode</strong> is Vertikal's real-time comment overlay system. Comments flow across the screen as you watch, creating a shared viewing experience without interrupting the content.
             </p>
@@ -290,10 +291,14 @@
         <div class="modal-content">
             <span class="close" onclick="document.getElementById('demoModal').classList.remove('active');">&times;</span>
             <h2 style="margin-bottom: 1.5rem; color: #fff;">Live Demo</h2>
-            <p style="color: var(--muted); font-size: 1.1rem; line-height: 1.6;">
+            <p style="color: var(--muted); font-size: 1.1rem; line-height: 1.6; margin-bottom: 1.5rem;">
                 Live demo launching March/April.<br>
                 Full beta expected June with at least 50 creators.
             </p>
+            <!-- TODO: Replace with actual signup form URL -->
+            <a href="/demo/" class="btn" style="margin-right: 1rem;">Join Demo Waitlist</a>
+            <!-- TODO: Replace with actual Founding 50 application URL -->
+            <a href="/apply/" class="btn" style="background: transparent; border-color: #FFD700; color: #FFD700;">Apply for Founding 50</a>
         </div>
     </div>
 
